--- a/src/index.scss
+++ b/src/index.scss
@@ -22,6 +22,7 @@
   font-size: 14px;
 
   &__sidebar {
+    overflow: auto;
     background-color: #f4f6f8;
     width: 200px;
     height: calc(100% - 120px);
