--- a/src/elements/spinner/spinner.css
+++ b/src/elements/spinner/spinner.css
@@ -1,7 +1,10 @@
 .loader__container {
+  position: absolute;
+  overflow: hidden;
   width: 100vw;
   height: 100vh;
   background: #fff;
+  z-index: 499;
 }
 
 .loader {
